<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_off_white"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".Signup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="-50dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/round_background"
            android:padding="15dp"
            android:src="@drawable/add"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:hintAnimationEnabled="true"
            android:textColorHint="@color/soft_text_grey"
            app:hintTextColor="@color/pastel_blue_primary"
            app:boxStrokeColor="@color/pastel_blue_primary"
            app:boxStrokeWidth="2dp">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/name"
                android:textSize="20sp"
                android:fontFamily="@font/opensans"
                android:inputType="textNoSuggestions"
                android:background="@android:color/transparent"
                android:textColor="@color/dark_navy_text"
                android:textColorHint="@color/soft_text_grey"
                android:maxLines="1"
                android:singleLine="true"
                android:importantForAutofill="no"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:hintAnimationEnabled="true"
            android:textColorHint="@color/soft_text_grey"
            app:hintTextColor="@color/pastel_blue_primary"
            app:boxStrokeColor="@color/pastel_blue_primary"
            app:boxStrokeWidth="2dp">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/prompt_email"
                android:textSize="20sp"
                android:fontFamily="@font/opensans"
                android:inputType="textEmailAddress"
                android:background="@android:color/transparent"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/dark_navy_text"
                android:textColorHint="@color/soft_text_grey"
                android:importantForAutofill="no"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:hintAnimationEnabled="true"
            android:textColorHint="@color/soft_text_grey"
            app:hintTextColor="@color/pastel_blue_primary"
            app:boxStrokeColor="@color/pastel_blue_primary"
            app:boxStrokeWidth="2dp">

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/phone_number"
                android:textSize="20sp"
                android:fontFamily="@font/opensans"
                android:maxLength="13"
                android:background="@android:color/transparent"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/dark_navy_text"
                android:textColorHint="@color/soft_text_grey"
                android:importantForAutofill="no"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="5dp"
            app:hintAnimationEnabled="true"
            android:textColorHint="@color/soft_text_grey"
            app:hintTextColor="@color/pastel_blue_primary"
            app:boxStrokeColor="@color/pastel_blue_primary"
            app:boxStrokeWidth="2dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/prompt_password"
                android:textSize="20sp"
                android:fontFamily="@font/opensans"
                android:inputType="textPassword"
                android:background="@android:color/transparent"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/dark_navy_text"
                android:textColorHint="@color/soft_text_grey"
                android:importantForAutofill="no"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="I am a:"
            android:textColor="@color/dark_navy_text"
            android:textSize="18sp"
            android:fontFamily="@font/opensans"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"/>

        <RadioGroup
            android:id="@+id/userTypeRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <RadioButton
                android:id="@+id/radioUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="User"
                android:textColor="@color/dark_navy_text"
                android:textSize="16sp"
                android:fontFamily="@font/opensans"
                android:checked="true"
                android:layout_marginEnd="20dp"
                android:buttonTint="@color/pastel_blue_primary"/>

            <RadioButton
                android:id="@+id/radioNGO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NGO"
                android:textColor="@color/dark_navy_text"
                android:textSize="16sp"
                android:fontFamily="@font/opensans"
                android:buttonTint="@color/pastel_blue_primary"/>

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_margin="20dp"
            android:text="@string/register"
            android:textColor="@color/clean_white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@color/pastel_blue_primary"
            app:cornerRadius="12dp"/>

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/not_register"
            android:textColor="@color/pastel_blue_primary"
            android:fontFamily="@font/opensans"
            android:textSize="17sp"/>

    </LinearLayout>
</LinearLayout>

